--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GifGenerator</title>
-  <base href="/">
-
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+ <title>GifGenerator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+
